# Delegate

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: analysis.yml  build-macos.yaml  build-ubuntu.yaml  build-windows.yaml  coverage.yml  scan-build.yml
cmake/: DelegateConfig.cmake.in
include/: delegate.hpp
test/: CMakeLists.txt
test/src/: delegate.test.cpp
